chore: emit updates on deployments
