# internal/api/generated.go
@@ -40,6 +40,8 @@ type CreateBinaryAppRequest struct {
 	ArtifactName    string             `json:"artifact_name"`
 	ArtifactSource  string             `json:"artifact_source"`
 	ArtifactVersion string             `json:"artifact_version"`
+	CallbackUrl     *string            `json:"callback_url,omitempty"`
+	DeploymentId    *string            `json:"deployment_id,omitempty"`
 	Domain          *string            `json:"domain,omitempty"`
 	EnvVars         *map[string]string `json:"env_vars,omitempty"`
 	Environment     string             `json:"environment"`
@@ -52,6 +54,8 @@ type CreateDockerAppRequest struct {
 	AppSlug         string             `json:"app_slug"`
 	ArtifactSource  string             `json:"artifact_source"`
 	ArtifactVersion string             `json:"artifact_version"`
+	CallbackUrl     *string            `json:"callback_url,omitempty"`
+	DeploymentId    *string            `json:"deployment_id,omitempty"`
 	DockerCommand   *[]string          `json:"docker_command,omitempty"`
 	Domain          *string            `json:"domain,omitempty"`
 	EnvVars         *map[string]string `json:"env_vars,omitempty"`
@@ -68,15 +72,19 @@ type DeployBinaryAppRequest struct {
 	ArtifactName    string    `json:"artifact_name"`
 	ArtifactSource  string    `json:"artifact_source"`
 	ArtifactVersion string    `json:"artifact_version"`
+	CallbackUrl     *string   `json:"callback_url,omitempty"`
+	DeploymentId    *string   `json:"deployment_id,omitempty"`
 	Environment     string    `json:"environment"`
 }
 
 // DeployDockerAppRequest defines model for DeployDockerAppRequest.
 type DeployDockerAppRequest struct {
-	AppSlug         string `json:"app_slug"`
-	ArtifactSource  string `json:"artifact_source"`
-	ArtifactVersion string `json:"artifact_version"`
-	Environment     string `json:"environment"`
+	AppSlug         string  `json:"app_slug"`
+	ArtifactSource  string  `json:"artifact_source"`
+	ArtifactVersion string  `json:"artifact_version"`
+	CallbackUrl     *string `json:"callback_url,omitempty"`
+	DeploymentId    *string `json:"deployment_id,omitempty"`
+	Environment     string  `json:"environment"`
 }
 
 // DeployResponse defines model for DeployResponse.
